[MOSIP-8222] ELK monitoring moved to monitoring namespace.

--- a/deployment/sandbox-v2/playbooks/elasticsearch.yml
+++ b/deployment/sandbox-v2/playbooks/elasticsearch.yml
@@ -7,7 +7,7 @@
     install_name: elasticsearch 
     helm_chart: '{{charts_root}}/elasticsearch'
     is_template: false
-    helm_namespace: default
+    helm_namespace: monitoring
     helm_values: '{{charts_root}}/elasticsearch/values.yaml'
   roles:
     - {role:  helm}
