updated missing parameter

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -101,3 +101,6 @@ mosip.registration.processor.crypto.decrypt.id=mosip.cryptomanager.decrypt
 
 #Kernel Crypto signature
 registration.processor.signature.isEnabled=true
+
+#--------Registration Processor Rest Client API's-----------
+CRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/keymanager/decrypt
