[MOSIP-8222] metrics-server added to view pod level CPU and Memory usage.

--- a/deployment/sandbox-v2/playbooks/dmzmonitoring.yml
+++ b/deployment/sandbox-v2/playbooks/dmzmonitoring.yml
@@ -1,3 +1,8 @@
+# Metrics-server
+- import_playbook: metrics.yml
+  vars:
+    kube_config: '{{clusters.dmz.kube_config}}'
+
 # Prometheus
 - import_playbook: prometheus.yml
   vars:
