[MOSIP-8071]. IDA: Generator jobs forced to run before services using helm hooks.

--- a/deployment/sandbox-v2/helm/charts/ida/templates/keys-job.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/keys-job.yaml
@@ -6,6 +6,9 @@ metadata:
   labels:
     app: {{ .Values.generators.key.name }}
     component: {{ .Values.component }} 
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-delete-policy": hook-succeeded
     
 spec:
   template:
