regproc client rest api mosip-8304

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -55,6 +55,7 @@ token.request.secretKey=abc123
 token.request.issuerUrl=http://keycloak/auth/realms/mosip
 
 #--------Registration processor rest client API's--------------
+CRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/keymanager/decrypt
 
 #Audit Service
 AUDIT=${mz.ingress.url}/v1/auditmanager/audits
