--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -94,7 +94,8 @@ versions:
         'regproc-registration-transaction-service': 'mosipid/registration-processor-registration-transaction-service:1.0.10'
       request: 
         'regproc-request-handler-service': 'mosipid/registration-processor-request-handler-service:1.0.10'
-
+      reprocess:
+        'regproc-reprocessor-stage': 'mosipdev/registration-processor-reprocessor-stage:1.0.11'
     dmzregproc:  
       receiver:
         'regproc-packet-receiver-stage': 'mosipid/registration-processor-packet-receiver-stage:1.0.10'
