--- a/deployment/sandbox-v2/playbooks/mzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/mzcluster.yml
@@ -6,17 +6,10 @@
     workers: mzworkers
 
 # Ingress nginx controller
-- hosts: console
+- import_playbook: ingress-nginx.yml
   vars:
-    kube_config: '{{clusters.mz.kube_config}}'
-    install_name: 'ingress-nginx'
-    helm_chart: '{{charts_root}}/ingress-nginx'
-    is_template: true
-    helm_namespace: '{{clusters.mz.ingress.namespace}}'
-    helm_values: '{{charts_root}}/ingress-nginx/values.template.j2'
-    ingress_ports: '{{clusters.mz.ingress.nodeports}}'
-  roles:
-    - {role:  helm, tags: [mz-ingress]}
+    kube_config: '{{clusters.mz.kube_config}}' 
+    ingress_nginx_namespace: '{{clusters.mz.ingress.namespace}}'
 
 # Kubenetes dashboard
 - hosts: console
