--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/camel-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/camel-dep.yaml
@@ -46,6 +46,9 @@ spec:
           containerPort: {{ .Values.services.camel.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.camel.ports.containerPort }}
+        volumeMounts:
+        {{- include "logger.mount" .  | indent 8}}
+
 #        readinessProbe:
 #          httpGet:
 #            path: {{ .Values.services.camel.healthUrl }} 
@@ -58,3 +61,8 @@ spec:
  #           port: {{ .Values.services.camel.ports.containerPort }} 
  #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
  #         periodSeconds: {{ .Values.probe.period }} 
+ #
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      volumes:
+      {{- include "logger.volume" .  | indent 6}}
