--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/status-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/status-dep.yaml
@@ -39,6 +39,10 @@ spec:
         ports:
         - name: verticle-port
           containerPort: {{ .Values.services.status.ports.containerPort }}
+
+        volumeMounts:
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.status.healthUrl }} 
@@ -51,3 +55,8 @@ spec:
 #            port: {{ .Values.services.status.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
+#
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      volumes:
+      {{- include "logger.volume" .  | indent 6}}
