--- a/deployment/sandbox-v2/helm/charts/regproc/templates/abishandler-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/abishandler-dep.yaml
@@ -45,6 +45,13 @@ spec:
           containerPort: {{ .Values.services.abishandler.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.abishandler.ports.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
+
 #        readinessProbe:  # TODO: Uncomment this or put a actuator health url
 #          httpGet:
 #            path: {{ .Values.services.abishandler.healthUrl }} 
