--- a/deployment/sandbox-v2/helm/charts/regproc/templates/biosvc-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/biosvc-dep.yaml
@@ -39,6 +39,9 @@ spec:
         ports:
         - name: verticle-port
           containerPort: {{ .Values.services.biosvc.ports.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.biosvc.healthUrl }} 
@@ -51,3 +54,8 @@ spec:
  #           port: {{ .Values.services.biosvc.ports.containerPort }} 
  #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
  #         periodSeconds: {{ .Values.probe.period }} 
+ #
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
+
