--- a/deployment/sandbox-v2/helm/charts/regproc/templates/camel-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/camel-dep.yaml
@@ -46,6 +46,12 @@ spec:
           containerPort: {{ .Values.services.camel.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.camel.ports.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
 #        readinessProbe:
 #          httpGet:
 #            path: {{ .Values.services.camel.healthUrl }} 
