--- a/deployment/sandbox-v2/helm/charts/regproc/templates/demo-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/demo-dep.yaml
@@ -45,6 +45,12 @@ spec:
           containerPort: {{ .Values.services.demo.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.demo.ports.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
 #        readinessProbe:
 #          httpGet:
 #            path: {{ .Values.services.demo.healthUrl }} 
