--- a/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
@@ -39,6 +39,9 @@ spec:
         ports:
         - name: verticle-port
           containerPort: {{ .Values.services.trans.ports.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.trans.healthUrl }} 
@@ -51,3 +54,7 @@ spec:
 #            port: {{ .Values.services.trans.ports.containerPort }} 
 #          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
 #          periodSeconds: {{ .Values.probe.period }} 
+#
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
