[MOSIP-8222] Log sidecars added in dmz regproc. Kibana run on nodeport for filebeat to access from dmz.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -29,7 +29,7 @@ clusters:
     nodeport_node: mzworker0.sb  # Any node on cluster for nodeport access
     any_node_ip: '10.20.20.157' # ip address of above node
     ingress:
-      namespace: default
+      namespace: ingress-nginx
       nodeports:
         http: 30080 
         https: 30443
@@ -54,12 +54,14 @@ clusters:
       grafana_token_file: '{{tmp_dir}}/grafana_mz.token'
       elasticsearch:
         host: 'elasticsearch-master:9200'
+      kibana: 
+        url: http://kibana-kibana:5601 
   dmz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/dmzcluster.config" 
     nodeport_node: dmzworker0.sb  # Any node on cluster for nodeport access
     any_node_ip: '10.20.20.207' # ip adddress of above node
     ingress:
-      namespace: default
+      namespace: ingress-nginx
       nodeports:
         http: 30080 
         https: 30443
@@ -84,7 +86,8 @@ clusters:
       grafana_token_file: '{{tmp_dir}}/grafana_dmz.token'
       elasticsearch:
         host: 'mzworker0.sb:30080/elasticsearch' # Connect to elasticsearch on MZ
-      
+      kibana: 
+        url: http://mzworker0.sb:30601  # Kibana runs on this nodeport on MZ. 
 
 # Registration processor shared variables
 #
@@ -106,7 +109,7 @@ postgres:
   max_connections: 1000
   node_affinity: 
     enabled: false # To run postgres on an exclusive node
-    node: 'mzworker1.sb' # Hostname. Run only on this node, and nothing else should run on this node
+    node: 'mzworker0.sb' # Hostname. Run only on this node, and nothing else should run on this node
     taint:
       key: "postgres" # Key for applying taint on node
       value: "only"  
@@ -200,7 +203,7 @@ hdfs:
       path: '{{nfs.folder}}/hdfs/dn' 
   node_affinity: 
     enabled: false # To run all hdfs pods exclusively on a single node.
-    node: 'mzworker2.sb' # Hostname. Run only on this node, and nothing else should run on this node
+    node: 'mzworker1.sb' # Hostname. Run only on this node, and nothing else should run on this node
     taint:
       key: "hdfs" # Key for applying taint on node
       value: "only"  
