--- a/deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/auth-dep.yaml
@@ -43,6 +43,9 @@ spec:
           value: {{ .Values.services.auth.hsmUrl }} 
         ports:
         - containerPort: {{ .Values.services.auth.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.auth.healthUrl }} 
@@ -55,3 +58,7 @@ spec:
  #           port: {{ .Values.services.auth.containerPort }} 
  #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
  #         periodSeconds: {{ .Values.probe.period }}
+ #
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
