--- a/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/otp-dep.yaml
@@ -47,6 +47,9 @@ spec:
           value: {{ .Values.services.otp.hsmUrl }} 
         ports:
         - containerPort: {{ .Values.services.otp.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.otp.healthUrl }} 
@@ -59,3 +62,7 @@ spec:
   #          port: {{ .Values.services.otp.containerPort }} 
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }}
+  #
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
