--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
@@ -41,6 +41,9 @@ spec:
           value: {{ .Values.isGlowroot }}
         ports:
         - containerPort: {{ .Values.services.identity.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.identity.healthUrl }} 
@@ -53,6 +56,7 @@ spec:
  #           port: {{ .Values.services.identity.containerPort }} 
  #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
  #         periodSeconds: {{ .Values.probe.period }}
-        readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.identity.containerPort }}
+ #
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
