--- a/deployment/sandbox-v2/helm/charts/prereg/templates/login-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/login-dep.yaml
@@ -41,6 +41,9 @@ spec:
           value: {{ .Values.isGlowroot }}
         ports:
         - containerPort: {{ .Values.services.login.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.login.healthUrl }} 
@@ -54,3 +57,6 @@ spec:
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }} 
           
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
