--- a/deployment/sandbox-v2/playbooks/reg-client-downloader.yml
+++ b/deployment/sandbox-v2/playbooks/reg-client-downloader.yml
@@ -1,9 +1,10 @@
-# Playbook to install reg-client docker
+# Playbook to install reg-client downloader
 # Inputs:
 #   kube_config  
-# 
 
-# Prepare folders on remote node
+
+
+# Prepare folders on nfs
 - hosts: nfsserver
   gather_facts: true
   vars:
@@ -14,12 +15,12 @@
 # Convert helm template to helm values 
 - hosts: console
   vars:
-    kube_config: '{{clusters.mz.kube_config}}'
-    install_name: 'reg-client' 
-    helm_chart: '{{charts_root}}/reg-client'
+    kube_config: '{{clusters.dmz.kube_config}}'
+    install_name: 'reg-client-downloader' 
+    helm_chart: '{{charts_root}}/reg-client-downloader'
     is_template: true  
     helm_namespace: 'default'
-    helm_values: '{{charts_root}}/reg-client/values.template.j2'
+    helm_values: '{{charts_root}}/reg-client-downloader/values.template.j2'
   roles:
     - {role:  helm}
 
