Minor change in properties.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/admin-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/admin-mz.properties
@@ -157,7 +157,8 @@ mosip.kernel.audit.manager.api=http://kernel-auditmanager-service/v1/auditmanage
 mosip.kernel.masterdata.audit-url=http://kernel-auditmanager-service/v1/auditmanager/audits
 
 -----------
-mosip.open-id.base-url={{ site.sandbox_public_url }}/keycloak
+# The base-url below should be an external URL to connect to keycloak
+mosip.open-id.base-url={{ keycloak.external_url }}
 mosip.admin-services.audit.manager.api=http://kernel-auditmanager-service/v1/auditmanager/audits
 mosip.admin-services.open-id.realmid=mosip
 mosip.admin-services.open-id.login_flow.name=authorization_code
