--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-dmz.properties
@@ -1,6 +1,6 @@
 #---------------------------------------Common properties-----------------------
 
-ingress.base.url: http://{{ clusters.mz.any_node_ip }}:30080/
+ingress.base.url: http://{{ clusters.mz.any_node_ip }}:{{ clusters.mz.ingress.nodeports.http }}
 
 #Kernel-idobjectalidator
 # Plug in property source as either 'LOCAL' or 'CONFIG_SERVER' or 'APPLICATION_CONTEXT' through this key
