--- a/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment 
 metadata:
   name: {{ .Values.name }}
-  namespace: {{ .Values.namespace }} 
+  namespace: {{ .Release.Namespace }} 
 spec:
   replicas: 1 
   selector:
@@ -24,24 +24,29 @@ spec:
       - name: {{ .Values.name }}
         image: {{ .Values.docker.image }}:{{ .Values.docker.tag }}
         env:
-        - name: env_git_uri 
-          value: {{ .Values.gitrepo.uri }}
-        - name: env_version
-          value: {{ .Values.dockerTag }}
         - name: env_jar_name 
           value: {{ .Values.jarName }}
         - name: env_config_folder 
-          value: ""
+          value: {{ .Values.searchFolders }}
+        {{ if eq .Values.localRepo.enabled true }}
+        - name: env_git_uri 
+          value: {{ .Values.localRepo.mountPath }}
+        {{ else }}
+        - name: env_git_uri 
+          value: {{ .Values.gitRepoUri }}
+        {{ end }}
         ports:
         - containerPort: {{ .Values.docker.containerPort }} 
         readinessProbe:
           tcpSocket:
             port: {{ .Values.docker.containerPort }}  # All defaults used
+{{ if eq .Values.localRepo.enabled true }}
         volumeMounts:
         - name: repo
-          mountPath: {{ .Values.gitrepo.mountPath }} 
+          mountPath: {{ .Values.localRepo.mountPath }} 
       volumes:
       - name: repo 
         persistentVolumeClaim:
-          claimName: {{ .Values.pvc.name }}
+          claimName: {{ .Values.localRepo.pvc.name }}
+{{ end }}
 
