--- a/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Values.component }}-ingress
-  namespace: {{ .Values.namespace}} 
+  namespace: {{ .Release.Namespace}} 
   annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.com/health-checks: "true"
