[MOSIP-8736] Web console for Activemq enabled

--- a/deployment/sandbox-v2/helm/charts/activemq/templates/activemq-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/activemq/templates/activemq-svc.yaml
@@ -11,10 +11,10 @@ spec:
   type: NodePort
   ports:
     - name: api-port
-      port: {{ .Values.docker.containerPort }}
+      port: {{ .Values.docker.servicePort }}
       targetPort: {{ .Values.docker.containerPort }}
       nodePort: {{ .Values.docker.nodeport}}	
 
     - name: web-console-port
-      port: 80
-      targetPort: 8161
+      port: {{ .Values.docker.webPort }}
+      targetPort: {{ .Values.docker.webport }}
