--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -221,14 +221,17 @@ config_repo:
   # If local_git_repo=true, a copy of git repo at `git_repo_uri` created on console machine and config server points
   # to the same. Any changes will then have to done on local repo and will not be reflected in parent git repo
   # then have
-  git_repo_uri: https://github.com/mosip/mosip-config 
+  git_repo_uri: https://github.com/mosip/mosip-config
   private: false  # Username and password are promted if private=true
   search_folders: sandbox # Subdir in repo containing properties
   local_git_repo:
     enabled: false
     path: '{{nfs.folder}}/mosip-config'
-    search_folders: ''  # If all properites at at the root repo level, then this will be empty
     storage_size: 10Mi
+
+config_server:
+  name: config-server
+  internal_url: http://config-server/
 
 activemq:
   name: activemq
