--- a/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/ingress-file.yaml
@@ -4,13 +4,14 @@ metadata:
   name: {{ .Values.component }}-ingress
   namespace: {{ .Release.Namespace}} 
   annotations:
-     kubernetes.io/ingress.class: "nginx"
-     nginx.com/health-checks: "true"
+    kubernetes.io/ingress.class: "nginx"
+    nginx.com/health-checks: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
   - http:
       paths:
-      - path: /config 
+      - path: /config(/|$)(.*)
         backend:
           serviceName: {{ .Values.name }} 
           servicePort: 80 
