--- a/deployment/sandbox-v2/playbooks/elasticsearch.yml
+++ b/deployment/sandbox-v2/playbooks/elasticsearch.yml
@@ -9,6 +9,7 @@
     is_template: false
     helm_namespace: monitoring
     helm_values: '{{charts_root}}/elasticsearch/values.yaml'
+    helm_strings: ''
   roles:
     - {role:  helm}
 
