--- a/deployment/sandbox-v2/playbooks/softhsm.yml
+++ b/deployment/sandbox-v2/playbooks/softhsm.yml
@@ -21,6 +21,7 @@
     is_template: true  
     helm_namespace: 'default'
     helm_values: '{{charts_root}}/softhsm/values.template.j2'
+    helm_strings: ''
   roles:
     - {role:  helm}
 
