--- a/deployment/sandbox-v2/playbooks/config-server.yml
+++ b/deployment/sandbox-v2/playbooks/config-server.yml
@@ -3,6 +3,8 @@
   vars:
     repo_path: '{{config_repo.git_repo_uri}}'
     repo_dest: '{{config_repo.local_git_repo.path}}'
+    githubuser: '{{config_repo.username}}'
+    githubpassword: '{{secrets.config_repo.password}}' # In vault
   roles:
     - {role:  github, when: config_repo.local_git_repo.enabled, become: yes}
 
@@ -14,6 +16,7 @@
     helm_chart: '{{charts_root}}/config-server'
     is_template: true  
     helm_namespace: 'default'
+    helm_strings: "encryptKey={{secrets.config_server.encrypt_key}},gitRepo.password={{secrets.config_repo.password}}"
     helm_values: '{{charts_root}}/config-server/values.template.j2'
   roles:
     - {role:  helm}
