--- a/deployment/sandbox-v2/playbooks/filebeat.yml
+++ b/deployment/sandbox-v2/playbooks/filebeat.yml
@@ -12,5 +12,6 @@
     is_template: true
     helm_namespace: monitoring
     helm_values: '{{charts_root}}/filebeat/values.templates.j2'
+    helm_strings: ''
   roles:
     - {role:  helm}
