--- a/deployment/sandbox-v2/playbooks/hdfs.yml
+++ b/deployment/sandbox-v2/playbooks/hdfs.yml
@@ -16,6 +16,7 @@
     is_template: true  
     helm_namespace: 'default'
     helm_values: '{{charts_root}}/hadoop/values.template.j2'
+    helm_strings: ''
   roles:
      - {role:  helm}
      - {role: hdfs-init,  tags: [hdfs-init]}
