--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -15,5 +15,6 @@
     is_template: true  
     helm_namespace: 'default'
     helm_values: '{{charts_root}}/kernel/values.template.j2'
+    helm_strings: ''
   roles:
     - {role:  helm}
