--- a/deployment/sandbox-v2/playbooks/keycloak.yml
+++ b/deployment/sandbox-v2/playbooks/keycloak.yml
@@ -8,6 +8,7 @@
     is_template: true  
     helm_namespace: 'default'
     helm_values: '{{charts_root}}/keycloak/values.template.j2'
+    helm_strings: ''
   roles:
     - {role:  helm, tags: [keycloak]}
 
