--- a/deployment/sandbox-v2/roles/postgres-init/tasks/update_passwords.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/tasks/update_passwords.yml
@@ -91,4 +91,10 @@
     username: '{{databases.mosip_idmap.user}}' 
     new_passwd: '{{secrets.postgres.idmapuser}}' 
 
+# iam
+- import_tasks: 'db_passwd.yml'
+  vars:
+    su_password: '{{secrets.postgres.su}}'   # new password changed in above step
+    username: '{{databases.mosip_iam.user}}' 
+    new_passwd: '{{secrets.postgres.iamuser}}' 
 
