[MOSIP-8774] Reverted back to mosip created config server docker. Created a new docker with some cleanup. Corrected module properties.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -242,7 +242,8 @@ config_repo:
 
 config_server:
   name: config-server
-  internal_url: http://config-server/
+  internal_url: http://config-server/config
+  ingress_url: http://mzworker0.sb:30080/config
 
 activemq:
   name: activemq
