--- a/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
@@ -22,15 +22,16 @@ spec:
     spec:
       containers:
       - name: {{ .Values.name }}
-        image: {{ .Values.docker.image }}:{{ .Values.docker.tag }}
+        image: {{ .Values.docker.image }}
+        imagePullPolicy: Always
         env:
         - name: SPRING_CLOUD_CONFIG_SERVER_GIT_SEARCHPATHS 
           value: {{ .Values.gitRepo.searchFolders }}
         - name: ENCRYPT_KEY
           value: {{ .Values.encryptKey }}
-        - name: keycloak.external_url
+        - name: KEYCLOAK_EXTERNAL_URL 
           value: {{ .Values.additionalParams.keycloakExternalUrl }}
-        - name: site.sandbox_public_url
+        - name: SANDBOX_PUBLIC_URL
           value: {{ .Values.additionalParams.sandboxPublicUrl }}
         {{ if eq .Values.localRepo.enabled true }}
         - name: SPRING_CLOUD_CONFIG_SERVER_GIT_URI
