--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -20,6 +20,7 @@
      - {role: packages/openshift, tags: [openshift]}
      - {role: packages/helm-cli, tags: [helm-cli]}
      - {role: packages/policycoreutils-python, tags: [policy]}
+     - {role: packages/requests3}
 
   tasks: 
     - name: Set read permission to home directory needed for nginx 
