--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -21,6 +21,7 @@
      - {role: packages/helm-cli, tags: [helm-cli]}
      - {role: packages/policycoreutils-python, tags: [policy]}
      - {role: packages/requests3}
+     - {role: packages/psycopg2}
 
   tasks: 
     - name: Set read permission to home directory needed for nginx 
